--- a/index.html
+++ b/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
   <head>
-    <meta charset="utf-8">
-    <title>Home</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>dechainlabs</title>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <h1>Hello World!</h1>
+  <header>
+    <h1>DechainLabs</h1>
+    <figure>
+      <img src="images/logo-dechain.JPG" alt="logo-dechain" class="logo">
+      <figcaption>Logo dechainlabs</figcaption>
+    </figure>
+    <nav>
+      <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">mygit</a></li>
+          <li><a href="Corso-linux/Introduzione-linux.md">mylinux</a></li>
+          <li><a href="#">mymarkdown</a></li>
+          <li><a href="corso-html/introduzione-html.html">myhtml</a></li>
+      </ul>
+    </nav>
+  </header>
+    
+    <figure>
+      <img src="images/logo-dechain.JPG" alt="logo-dechain" class="logo">
+      <figcaption>Logo dechainlabs</figcaption>
+    </figure>
+    <p>Il mio primo sito.</p>
+    <p>
+      Il più grande nemico della conoscenza non è l'ignoranza, è l'illusione
+      della conoscenza.
+    </p>
+    <footer>
+      <p>&copy; 2024 Il Mio Sito Web. Tutti i diritti riservati.</p>
+  </footer>
   </body>
 </html>
